samples/_failures_safe/1761514105_5eb953_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e9d3a7c.c: In function ‘main’:
./samples/SAFE/__tmp_0e9d3a7c.c:146:25: error: missing terminating " character
  146 |         fprintf(stderr, "Failed to add compression
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0e9d3a7c.c:146:9: error: expected expression at end of input
  146 |         fprintf(stderr, "Failed to add compression
      |         ^~~~~~~
./samples/SAFE/__tmp_0e9d3a7c.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0e9d3a7c.c:146:9: error: expected declaration or statement at end of input
